# lsscsi

./: AUTHORS  CHANGELOG  CREDITS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  ar-lib  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.in  lsscsi.8  lsscsi.c  lsscsi.spec
.deps/: lsscsi.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: changelog  control  copyright  docs  rules
doc/: Makefile.am  Makefile.in  README  lsscsi.8  lsscsi.html
src/: Makefile.am  Makefile.in  lsscsi.c  sg_unaligned.h
